--- a/dev-test/production/templates/index.html
+++ b/dev-test/production/templates/index.html
@@ -4,7 +4,7 @@
     <title>ShipStreams</title>
   </head>
   <body>
-    <h1>Vessel Cameras</h1>
+    <h1 style="text-align:center">Vessel Cameras</h1>
     <img src="{{ url_for('video_feed') }}">
   </body>
 </html>
